syntax = "proto3";

package explorer.v1;

import "google/protobuf/timestamp.proto";

service ExplorerService {
  rpc GetChainTips(GetChainTipsRequest) returns (GetChainTipsResponse) {}
}

message GetChainTipsRequest {}

message ChainTip {
  string hash = 1;
  uint64 height = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message GetChainTipsResponse {
  ChainTip mainchain = 1; // L1
  ChainTip thunder = 2; // L2-S9
  ChainTip bitassets = 3; // L2-S4
  ChainTip bitnames = 4; // L2-S2
  ChainTip zside = 5; // L2-S98
}
